# parsimmon

./: AGENTS.md  README.md  llm_install.md  pyproject.toml
docs/: llm_install.md
src/parsimmon/: __init__.py  _utils.py  cache.py  manager.py  parameters.py  ranges.py  results.py  study.py
tests/: conftest.py  test_cache.py  test_cache_integration.py  test_manager.py  test_parameters.py  test_ranges.py  test_results.py  test_study.py
