[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parsimmon"
version = "0.1.0"
description = "Parameter and Simulation Management"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "numpy",
    "sciris",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["src/parsimmon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
